--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -36,6 +36,12 @@
                 <%= agenda.title %>
                 <i class="right fa fa-angle-left"></i>
               </p>
+              <button type="button" class="btn btn-primary">
+              <% if agenda.user == current_user || current_user.id == agenda.team.owner_id %>
+                <%= link_to 'アジェンダの削除', agenda_path(agenda), method: :delete %>
+              <% end %>
+              </button>
+
             </a>
             <ul class="nav nav-treeview" style="display: block;">
               <% agenda.articles.each do |article| %>
